classの切り替え、ボタンの追加

--- a/index.html
+++ b/index.html
@@ -41,17 +41,23 @@
           <div>
             <label for="range-r-1" class="label-rgb">R</label>
             <input type="range" id = "range-r-1" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'r', '1');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('r', '1', 'minus');"/>
             <input type="text" id = "text-r-1" value="255" oninput="changeRange('text', 'r', '1');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('r', '1', 'plus');"/>
           </div>
           <div>
             <label for="range-g-1" class="label-rgb">G</label>
             <input type="range" id = "range-g-1" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'g', '1');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('g', '1', 'minus');"/>
             <input type="text" id = "text-g-1" value="255" oninput="changeRange('text', 'g', '1');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('g', '1', 'plus');"/>
           </div>
           <div>
             <label for="range-b-1" class="label-rgb">B</label>
             <input type="range" id = "range-b-1" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'b', '1');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('b', '1', 'minus');"/>
             <input type="text" id = "text-b-1" value="255" oninput="changeRange('text', 'b', '1');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('b', '1', 'plus');"/>
           </div>
         </div>
         <div class = "hex-area">
@@ -69,17 +75,23 @@
           <div>
             <label for="range-r-2" class="label-rgb">R</label>
             <input type="range" id = "range-r-2" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'r', '2');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('r', '2', 'minus');"/>
             <input type="text" id = "text-r-2" value="255" oninput="changeRange('text', 'r', '2');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('r', '2', 'plus');"/>
           </div>
           <div>
             <label for="range-g-2" class="label-rgb">G</label>
             <input type="range" id = "range-g-2" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'g', '2');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('g', '2', 'minus');"/>
             <input type="text" id = "text-g-2" value="255" oninput="changeRange('text', 'g', '2');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('g', '2', 'plus');"/>
           </div>
           <div>
             <label for="range-b-2" class="label-rgb">B</label>
             <input type="range" id = "range-b-2" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'b', '2');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('b', '2', 'minus');"/>
             <input type="text" id = "text-b-2" value="255" oninput="changeRange('text', 'b', '2');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('b', '2', 'plus');"/>
           </div>
         </div>
         <div class = "hex-area">
@@ -97,17 +109,23 @@
           <div>
             <label for="range-r-3" class="label-rgb">R</label>
             <input type="range" id = "range-r-3" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'r', '3');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('r', '3', 'minus');"/>
             <input type="text" id = "text-r-3" value="255" oninput="changeRange('text', 'r', '3');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('r', '3', 'plus');"/>
           </div>
           <div>
             <label for="range-g-3" class="label-rgb">G</label>
             <input type="range" id = "range-g-3" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'g', '3');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('g', '3', 'minus');"/>
             <input type="text" id = "text-g-3" value="255" oninput="changeRange('text', 'g', '3');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('g', '3', 'plus');"/>
           </div>
           <div>
             <label for="range-b-3" class="label-rgb">B</label>
             <input type="range" id = "range-b-3" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'b', '3');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('b', '3', 'minus');"/>
             <input type="text" id = "text-b-3" value="255" oninput="changeRange('text', 'b', '3');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('b', '3', 'plus');"/>
           </div>
         </div>
         <div class = "hex-area">
@@ -125,17 +143,23 @@
           <div>
             <label for="range-r-4" class="label-rgb">R</label>
             <input type="range" id = "range-r-4" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'r', '4');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('r', '4', 'minus');"/>
             <input type="text" id = "text-r-4" value="255" oninput="changeRange('text', 'r', '4');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('r', '4', 'plus');"/>
           </div>
           <div>
             <label for="range-g-4" class="label-rgb">G</label>
             <input type="range" id = "range-g-4" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'g', '4');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('g', '4', 'minus');"/>
             <input type="text" id = "text-g-4" value="255" oninput="changeRange('text', 'g', '4');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('g', '4', 'plus');"/>
           </div>
           <div>
             <label for="range-b-4" class="label-rgb">B</label>
             <input type="range" id = "range-b-4" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'b', '4');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('b', '4', 'minus');"/>
             <input type="text" id = "text-b-4" value="255" oninput="changeRange('text', 'b', '4');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('b', '4', 'plus');"/>
           </div>
         </div>
         <div class = "hex-area">
@@ -153,17 +177,23 @@
           <div>
             <label for="range-r-5" class="label-rgb">R</label>
             <input type="range" id = "range-r-5" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'r', '5');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('r', '5', 'minus');"/>
             <input type="text" id = "text-r-5" value="255" oninput="changeRange('text', 'r', '5');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('r', '5', 'plus');"/>
           </div>
           <div>
             <label for="range-g-5" class="label-rgb">G</label>
             <input type="range" id = "range-g-5" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'g', '5');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('g', '5', 'minus');"/>
             <input type="text" id = "text-g-5" value="255" oninput="changeRange('text', 'g', '5');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('g', '5', 'plus');"/>
           </div>
           <div>
             <label for="range-b-5" class="label-rgb">B</label>
             <input type="range" id = "range-b-5" value="255" min="0" max="255" step="1" oninput="changeRange('range', 'b', '5');" />
+            <input type="button" value="-" class="btn-rgb" onclick="clickCountBtn('b', '5', 'minus');"/>
             <input type="text" id = "text-b-5" value="255" oninput="changeRange('text', 'b', '5');" />
+            <input type="button" value="+" class="btn-rgb" onclick="clickCountBtn('b', '5', 'plus');"/>
           </div>
         </div>
         <div class = "hex-area">
